--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "input-otp": "^1.4.1",
     "libphonenumber-js": "^1.11.4",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
